var searchData=
[
  ['delayed_5fbound_5fdemons_5f_3551',['delayed_bound_demons_',['../classoperations__research_1_1BooleanVar.html#a5114f46a021e08dd81c2d7462a8bc735',1,'operations_research::BooleanVar']]],
  ['delta_5fchanges_5f_3552',['delta_changes_',['../classoperations__research_1_1VarLocalSearchOperator.html#a6525132991e9140755b271a1cf43fee7',1,'operations_research::VarLocalSearchOperator']]],
  ['descriptor_5ftable_5fortools_5f2fconstraint_5f5fsolver_5f2fassignment_5f2eproto_3553',['descriptor_table_ortools_2fconstraint_5fsolver_2fassignment_2eproto',['../assignment_8pb_8h.html#a686fb78be7dc1ca4d4498448d5f58a58',1,'assignment.pb.h']]],
  ['descriptor_5ftable_5fortools_5f2fconstraint_5f5fsolver_5f2fdemon_5f5fprofiler_5f2eproto_3554',['descriptor_table_ortools_2fconstraint_5fsolver_2fdemon_5fprofiler_2eproto',['../demon__profiler_8pb_8h.html#a7c0ae616fff24fe8760a66164f4fbcbd',1,'demon_profiler.pb.h']]],
  ['descriptor_5ftable_5fortools_5f2fconstraint_5f5fsolver_5f2frouting_5f5fenums_5f2eproto_3555',['descriptor_table_ortools_2fconstraint_5fsolver_2frouting_5fenums_2eproto',['../routing__enums_8pb_8h.html#adb36228f7101310ce5c6464e0afa24ab',1,'routing_enums.pb.h']]],
  ['descriptor_5ftable_5fortools_5f2fconstraint_5f5fsolver_5f2frouting_5f5fparameters_5f2eproto_3556',['descriptor_table_ortools_2fconstraint_5fsolver_2frouting_5fparameters_2eproto',['../routing__parameters_8pb_8h.html#a08fb716a4f5f875f265060f453fa01b1',1,'routing_parameters.pb.h']]],
  ['descriptor_5ftable_5fortools_5f2fconstraint_5f5fsolver_5f2fsearch_5f5flimit_5f2eproto_3557',['descriptor_table_ortools_2fconstraint_5fsolver_2fsearch_5flimit_2eproto',['../search__limit_8pb_8h.html#a3508751555ce51a5bbea693e90ef5fb7',1,'search_limit.pb.h']]],
  ['descriptor_5ftable_5fortools_5f2fconstraint_5f5fsolver_5f2fsolver_5f5fparameters_5f2eproto_3558',['descriptor_table_ortools_2fconstraint_5fsolver_2fsolver_5fparameters_2eproto',['../solver__parameters_8pb_8h.html#a7753970452f2feffe295496f9b948c6c',1,'solver_parameters.pb.h']]],
  ['dimension_3559',['dimension',['../structoperations__research_1_1RoutingModel_1_1CostClass_1_1DimensionCost.html#a0c310f28070bbb116acea285b7b891ee',1,'operations_research::RoutingModel::CostClass::DimensionCost']]],
  ['dimension_5fcapacities_3560',['dimension_capacities',['../structoperations__research_1_1RoutingModel_1_1VehicleClass.html#a7d97f1723731f1618d519c2089f8f349',1,'operations_research::RoutingModel::VehicleClass']]],
  ['dimension_5fend_5fcumuls_5fmax_3561',['dimension_end_cumuls_max',['../structoperations__research_1_1RoutingModel_1_1VehicleClass.html#aec2f68b291a699a015f05b9531149d03',1,'operations_research::RoutingModel::VehicleClass']]],
  ['dimension_5fend_5fcumuls_5fmin_3562',['dimension_end_cumuls_min',['../structoperations__research_1_1RoutingModel_1_1VehicleClass.html#ae21ea61bbb486caa9404734373685893',1,'operations_research::RoutingModel::VehicleClass']]],
  ['dimension_5fevaluator_5fclasses_3563',['dimension_evaluator_classes',['../structoperations__research_1_1RoutingModel_1_1VehicleClass.html#a2e96542c2d18ed442c6dc3367009fe0e',1,'operations_research::RoutingModel::VehicleClass']]],
  ['dimension_5fstart_5fcumuls_5fmax_3564',['dimension_start_cumuls_max',['../structoperations__research_1_1RoutingModel_1_1VehicleClass.html#abdd163e15a00e879fe9fa9fe8e2acd42',1,'operations_research::RoutingModel::VehicleClass']]],
  ['dimension_5fstart_5fcumuls_5fmin_3565',['dimension_start_cumuls_min',['../structoperations__research_1_1RoutingModel_1_1VehicleClass.html#a49c5021ae307aa7f5d390a54d4c2e103',1,'operations_research::RoutingModel::VehicleClass']]],
  ['dimension_5ftransit_5fevaluator_5fclass_5fand_5fcost_5fcoefficient_3566',['dimension_transit_evaluator_class_and_cost_coefficient',['../structoperations__research_1_1RoutingModel_1_1CostClass.html#af2f6e7be2de171fceb7a2de8e62b6fab',1,'operations_research::RoutingModel::CostClass']]],
  ['distance_3567',['distance',['../structoperations__research_1_1CheapestInsertionFilteredHeuristic_1_1StartEndValue.html#a3b397c04a34b9ac7392257939f90b1bb',1,'operations_research::CheapestInsertionFilteredHeuristic::StartEndValue']]],
  ['distance_5fduration_3568',['distance_duration',['../structoperations__research_1_1DisjunctivePropagator_1_1Tasks.html#a7cc44fe8f5261fa7bacc58867dfb3882',1,'operations_research::DisjunctivePropagator::Tasks']]],
  ['duration_5fmax_3569',['duration_max',['../structoperations__research_1_1DisjunctivePropagator_1_1Tasks.html#a702574cf13b54bc225f06ce3a548d4e3',1,'operations_research::DisjunctivePropagator::Tasks']]],
  ['duration_5fmin_3570',['duration_min',['../structoperations__research_1_1DisjunctivePropagator_1_1Tasks.html#a115f81774c290337166f498824bf5b87',1,'operations_research::DisjunctivePropagator::Tasks']]]
];
